Embed top-rated awards section in static homepage

--- a/index.html
+++ b/index.html
@@ -143,6 +143,144 @@
       </div>
     </header>
     <main>
+      <section class="top-rated" aria-labelledby="top-rated-heading">
+        <div class="container top-rated__inner">
+          <div class="top-rated__content">
+            <p class="top-rated__eyebrow">Awards &amp; Social Proof</p>
+            <h2 class="top-rated__title" id="top-rated-heading">
+              We’re the top-rated<br />
+              B2B lead generation<br />
+              company in the USA
+            </h2>
+            <p class="top-rated__subtitle">
+              See what others are saying about Belkins’ B2B lead generation services and how we helped hack their
+              growth.
+            </p>
+          </div>
+          <div class="top-rated__grid" role="list">
+            <article class="top-rated__card" role="listitem">
+              <div class="top-rated__badge" style="background: linear-gradient(135deg, #f0f4ff 0%, #d8e6ff 100%)" aria-hidden="true">
+                <svg viewBox="0 0 88 88" role="presentation" focusable="false">
+                  <defs>
+                    <linearGradient id="triangleGradient" x1="0%" y1="0%" x2="100%" y2="100%">
+                      <stop offset="0%" stop-color="#5b9bff" />
+                      <stop offset="100%" stop-color="#2977ff" />
+                    </linearGradient>
+                  </defs>
+                  <circle cx="44" cy="44" r="40" fill="#eaf2ff" />
+                  <path d="M44 16L70 64H18L44 16Z" fill="url(#triangleGradient)" />
+                </svg>
+              </div>
+              <div class="top-rated__meta">
+                <p class="top-rated__card-title">QASO Global Index</p>
+                <p class="top-rated__card-caption">Top outsourcing partner 2024</p>
+              </div>
+            </article>
+            <article class="top-rated__card" role="listitem">
+              <div class="top-rated__badge" style="background: linear-gradient(135deg, #ecf6ff 0%, #d5e7ff 100%)" aria-hidden="true">
+                <svg viewBox="0 0 88 88" role="presentation" focusable="false">
+                  <defs>
+                    <linearGradient id="shieldGradient" x1="0%" y1="0%" x2="100%" y2="100%">
+                      <stop offset="0%" stop-color="#ffcb66" />
+                      <stop offset="100%" stop-color="#ff9640" />
+                    </linearGradient>
+                  </defs>
+                  <circle cx="44" cy="44" r="40" fill="#fff3e0" />
+                  <path
+                    d="M44 20L64 26V44C64 56.1503 55.916 67.0685 44 72C32.084 67.0685 24 56.1503 24 44V26L44 20Z"
+                    fill="url(#shieldGradient)"
+                  />
+                </svg>
+              </div>
+              <div class="top-rated__meta">
+                <p class="top-rated__card-title">Top Lead Generation</p>
+                <p class="top-rated__card-caption">Best-in-class demand gen 2024</p>
+              </div>
+            </article>
+            <article class="top-rated__card" role="listitem">
+              <div class="top-rated__badge" style="background: linear-gradient(135deg, #ffefe6 0%, #ffe0d1 100%)" aria-hidden="true">
+                <svg viewBox="0 0 88 88" role="presentation" focusable="false">
+                  <defs>
+                    <linearGradient id="ribbonGradient" x1="0%" y1="0%" x2="100%" y2="100%">
+                      <stop offset="0%" stop-color="#ffcaa6" />
+                      <stop offset="100%" stop-color="#f5895d" />
+                    </linearGradient>
+                  </defs>
+                  <circle cx="44" cy="44" r="40" fill="#fff1e9" />
+                  <path
+                    d="M44 20C34.6112 20 27 27.6112 27 37C27 46.3888 34.6112 54 44 54C53.3888 54 61 46.3888 61 37C61 27.6112 53.3888 20 44 20Z"
+                    fill="url(#ribbonGradient)"
+                  />
+                  <path d="M37 54L32 72L44 64L56 72L51 54" fill="#f26a3f" />
+                </svg>
+              </div>
+              <div class="top-rated__meta">
+                <p class="top-rated__card-title">Stevie Awards Bronze</p>
+                <p class="top-rated__card-caption">Sales &amp; customer service winner</p>
+              </div>
+            </article>
+            <article class="top-rated__card top-rated__card--rating" role="listitem">
+              <div class="top-rated__badge" style="background: linear-gradient(135deg, #eaf6ff 0%, #d8eefe 100%)" aria-hidden="true">
+                <svg viewBox="0 0 88 88" role="presentation" focusable="false">
+                  <circle cx="44" cy="44" r="40" fill="#eaf6ff" />
+                  <circle cx="44" cy="44" r="28" fill="#0d2b3d" />
+                  <path
+                    d="M44 26C33.5066 26 25 34.5066 25 45C25 55.4934 33.5066 64 44 64C54.4934 64 63 55.4934 63 45H54C54 50.5228 49.5228 55 44 55C38.4772 55 34 50.5228 34 45C34 39.4772 38.4772 35 44 35V26Z"
+                    fill="#ffffff"
+                  />
+                </svg>
+              </div>
+              <div class="top-rated__meta">
+                <div class="top-rated__rating">
+                  <span class="top-rated__card-title">Clutch</span>
+                  <span class="top-rated__divider" aria-hidden="true">/</span>
+                  <span class="top-rated__score">4.9 score</span>
+                </div>
+                <span class="top-rated__reviews">221 reviews</span>
+              </div>
+            </article>
+            <article class="top-rated__card top-rated__card--rating" role="listitem">
+              <div class="top-rated__badge" style="background: linear-gradient(135deg, #fff0eb 0%, #ffdcd1 100%)" aria-hidden="true">
+                <svg viewBox="0 0 88 88" role="presentation" focusable="false">
+                  <circle cx="44" cy="44" r="40" fill="#fff0eb" />
+                  <path
+                    d="M44 18C31.2975 18 21 28.2975 21 41C21 53.7025 31.2975 64 44 64C50.6274 64 56.5592 61.1838 60.8211 56.7712L53.7931 49.7432C51.3779 52.1585 47.889 53.6923 44 53.6923C36.5605 53.6923 30.3077 47.4395 30.3077 40C30.3077 32.5605 36.5605 26.3077 44 26.3077C51.4395 26.3077 57.6923 32.5605 57.6923 40V41.5385H44V50.8462H67.3846V40C67.3846 28.2975 56.7025 18 44 18Z"
+                    fill="#ff6536"
+                  />
+                </svg>
+              </div>
+              <div class="top-rated__meta">
+                <div class="top-rated__rating">
+                  <span class="top-rated__card-title">G2</span>
+                  <span class="top-rated__divider" aria-hidden="true">/</span>
+                  <span class="top-rated__score">4.8 score</span>
+                </div>
+                <span class="top-rated__reviews">84 reviews</span>
+              </div>
+            </article>
+            <article class="top-rated__card top-rated__card--rating" role="listitem">
+              <div class="top-rated__badge" style="background: linear-gradient(135deg, #e8fbf6 0%, #d1f4ea 100%)" aria-hidden="true">
+                <svg viewBox="0 0 88 88" role="presentation" focusable="false">
+                  <circle cx="44" cy="44" r="40" fill="#e9f8f6" />
+                  <path
+                    d="M44 22C32.9543 22 24 30.9543 24 42C24 53.0457 32.9543 62 44 62C55.0457 62 64 53.0457 64 42H56C56 48.6274 50.6274 54 44 54C37.3726 54 32 48.6274 32 42C32 35.3726 37.3726 30 44 30C47.866 30 51.295 31.6395 53.8076 34.1924L59.4644 28.5355C55.5794 24.6505 50.0794 22 44 22Z"
+                    fill="#1d9e90"
+                  />
+                  <path d="M53 44C53 49.5228 48.5228 54 43 54V44H53Z" fill="#f9b245" />
+                </svg>
+              </div>
+              <div class="top-rated__meta">
+                <div class="top-rated__rating">
+                  <span class="top-rated__card-title">UpCity</span>
+                  <span class="top-rated__divider" aria-hidden="true">/</span>
+                  <span class="top-rated__score">5.0 score</span>
+                </div>
+                <span class="top-rated__reviews">67 reviews</span>
+              </div>
+            </article>
+          </div>
+        </div>
+      </section>
       <section class="client-plan" aria-labelledby="client-plan-heading">
         <div class="container">
           <div class="client-plan__intro">
