--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div id="site-header" data-fragment="header"></div>
-    <template id="header-fallback">
+    <div id="site-header" data-fragment="header">
       <header class="site-header">
         <div class="container">
           <nav class="main-nav" aria-label="Main navigation">
@@ -144,7 +143,7 @@
           </section>
         </div>
       </header>
-    </template>
+    </div>
     <main id="main-content">
       <section class="client-plan" aria-labelledby="client-plan-heading">
         <div class="container">
@@ -794,8 +793,7 @@
       </section>
 
     </main>
-    <div id="site-footer" data-fragment="footer"></div>
-    <template id="footer-fallback">
+    <div id="site-footer" data-fragment="footer">
       <footer id="site-footer" class="site-footer" aria-labelledby="footer-heading">
         <h2 id="footer-heading" class="sr-only">Site footer</h2>
         <div class="site-footer__surface">
@@ -953,7 +951,7 @@
           </div>
         </div>
       </footer>
-    </template>
+    </div>
     <script src="scripts.js"></script>
   </body>
 </html>
