feat: add skip link to inline header fallback

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     <div id="site-header" data-fragment="header">
+      <a class="skip-link" href="#main-content">Skip to main content</a>
       <header class="site-header">
         <div class="container">
           <nav class="main-nav" aria-label="Main navigation">
