--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     <header id="site-header" data-fragment="header" class="site-header">
+      <a class="skip-link" href="#main-content">Skip to main content</a>
       <div class="container">
         <nav class="main-nav" aria-label="Main navigation">
           <a class="brand" href="#" aria-label="Belkins home">
